--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -19,3 +19,9 @@ $font-size1 : 25px ;
 $font-size2 : 20px ; 
 $font-size3 : 18px ; 
 $font-size4 : 15px ; 
+
+$grey : #6e6b6b ; 
+$light_grey : #a09c9c ; 
+$very_light_grey : #EAEAEA ; 
+$dark_grey : #7d7d7d ;
+$very_dark_grey : #353535 ;
