--- a/sass/components/btn_commander.scss
+++ b/sass/components/btn_commander.scss
@@ -7,7 +7,7 @@
   font-size : $font-size3 ; 
   font-weight : bold ; 
   border-radius : 30px ; 
-  box-shadow : 3px 3px 3px #e4dede ; 
+  box-shadow : 3px 3px 3px $very_light_grey ; 
   margin : 1% 26% 20% 26% ; 
   padding : 15px 50px ; 
   position : relative ; 
@@ -53,7 +53,7 @@
       background : -webkit-gradient(linear, left bottom, right top,from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
       background : -moz-gradient(linear, left bottom, right top, from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
     background : gradient(linear, left bottom, right top, from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
-    box-shadow : 3px 3px 3px darken(#e4dede, 35%) ; 
+    box-shadow : 3px 3px 3px darken($very_light_grey, 35%) ; 
       -webkit-transform : scaleX(0) ; 
       -moz-transform : scaleX(0) ;
     transform : scaleX(0) ;
