--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
   width: 230px;
   font-weight: bold;
   border: none;
-  box-shadow: 3px 3px 3px #e4dede;
+  box-shadow: 3px 3px 3px #EAEAEA;
   border-radius: 30px;
   padding: 17px 0px;
   margin: 4% 30% 8%;
@@ -84,7 +84,7 @@ body {
   background: -webkit-gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
   background: -moz-gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
   background: gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
-  box-shadow: 3px 3px 3px #947c7c;
+  box-shadow: 3px 3px 3px #919191;
   -webkit-transform: scaleX(0);
   -moz-transform: scaleX(0);
   transform: scaleX(0);
@@ -149,7 +149,7 @@ body {
   font-size: 18px;
   font-weight: bold;
   border-radius: 30px;
-  box-shadow: 3px 3px 3px #e4dede;
+  box-shadow: 3px 3px 3px #EAEAEA;
   margin: 1% 26% 20% 26%;
   padding: 15px 50px;
   position: relative;
@@ -197,7 +197,7 @@ body {
   background: -webkit-gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
   background: -moz-gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
   background: gradient(linear, left bottom, right top, from(#fface8), to(#ae80e5));
-  box-shadow: 3px 3px 3px #947c7c;
+  box-shadow: 3px 3px 3px #919191;
   -webkit-transform: scaleX(0);
   -moz-transform: scaleX(0);
   transform: scaleX(0);
@@ -314,7 +314,7 @@ header .restaurant_nom .favori {
 
 footer {
   font-size: 18px;
-  color: #D7D7D7;
+  color: #EAEAEA;
   background-color: #353535;
   padding: 10px 0;
 }
@@ -364,11 +364,11 @@ footer .container .footer_liste {
   font-weight: bold;
 }
 footer .container .footer_liste i.fa-utensils {
-  color: #D7D7D7;
+  color: #EAEAEA;
   font-size: 15px;
 }
 footer .container .footer_liste i.fa-hands-helping {
-  color: #D7D7D7;
+  color: #EAEAEA;
   font-size: 10px;
 }
 footer .container a {
@@ -422,6 +422,7 @@ footer .container a {
   }
 }
 #fonctionnement .categorie {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -440,16 +441,16 @@ footer .container a {
   padding: 15px;
   position: absolute;
   z-index: 1;
-  margin-left: -73%;
+  left: 25px;
 }
 @media (min-width: 767px) {
   #fonctionnement .categorie .nombre {
-    margin-left: -55%;
+    left: 120px;
   }
 }
 @media screen and (min-width: 1000px) {
   #fonctionnement .categorie .nombre {
-    margin-left: -280px;
+    left: 75px;
   }
 }
 #fonctionnement .categorie .fonctionnement_description {
@@ -459,7 +460,7 @@ footer .container a {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  box-shadow: 2px 3px 7px #e0dede;
+  box-shadow: 2px 3px 7px #EAEAEA;
   border-radius: 25px;
   width: 80%;
   margin: 10px;
@@ -620,7 +621,7 @@ footer .container a {
   margin: 10px auto;
   width: 100%;
   height: 270px;
-  box-shadow: 2px 2px 3px #f6f6f6;
+  box-shadow: 2px 2px 3px #EAEAEA;
 }
 @media (min-width: 767px) {
   #restaurants .liste_restaurants .restaurant {
@@ -737,7 +738,7 @@ footer .container a {
   margin-left: 10px;
   font-size: 20px;
   font-weight: normal;
-  color: #665959;
+  color: #7d7d7d;
   width: 50px;
   border-bottom: solid 3px #99E2D0;
   padding-bottom: 10px;
@@ -750,7 +751,7 @@ footer .container a {
   justify-content: center;
   margin: 20px 10px;
   border-radius: 20px;
-  box-shadow: 4px 3px 5px #979090;
+  box-shadow: 4px 3px 5px #7d7d7d;
   width: 90%;
 }
 @media (min-width: 767px) {
