--- a/sass/pages/fonctionnement.scss
+++ b/sass/pages/fonctionnement.scss
@@ -58,6 +58,7 @@
   
     .fonctionnement_description {
       position : relative ;
+      font-size : 16px ; 
       font-weight : bold ; 
       background-color : $secondary_background ; 
       display : flex ;
