--- a/style.css
+++ b/style.css
@@ -746,7 +746,7 @@ footer .container a {
   justify-content: center;
   margin: 20px 10px;
   border-radius: 20px;
-  box-shadow: 4px 3px 5px #7d7d7d;
+  box-shadow: 4px 3px 5px #a09c9c;
   width: 90%;
 }
 @media (min-width: 767px) {
@@ -1144,9 +1144,9 @@ body #loading_spinner {
   -moz-transform: translateX(-20px);
   -webkit-transform: translateX(-20px);
   transform: translateX(-20px);
-  -moz-transition: transform 0.2s ease-out;
-  -webkit-transition: transform 0.2s ease-out;
-  transition: transform 0.2s ease-out;
+  -moz-transition: transform 0.5s linear;
+  -webkit-transition: transform 0.5s linear;
+  transition: transform 0.5s linear;
   background-color: #99E2D0;
   border-radius: 0px 10px 10px 0px;
 }
