--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -43,11 +43,11 @@ footer {
     .footer_liste {
       font-weight : bold ; 
          
-      i.fa-utensils {
+      .fa-utensils {
         color : $very_light_grey ; 
         font-size : 15px ; 
       }
-      i.fa-hands-helping {
+      .fa-hands-helping {
         color : $very_light_grey ; 
         font-size : 10px ; 
       }
