--- a/sass/themes/animation_check_circle.scss
+++ b/sass/themes/animation_check_circle.scss
@@ -11,9 +11,9 @@
       -moz-transform : translateX(-20px) ; 
       -webkit-transform : translateX(-20px) ;
     transform : translateX(-20px) ;
-      -moz-transition : transform 0.5s linear ;
-      -webkit-transition : transform 0.5s linear ; 
-    transition : transform 0.5s linear ;
+      -moz-transition : transform 0.3s ease-in-out ;
+      -webkit-transition : transform 0.3s ease-in-out ; 
+    transition : transform 0.3s ease-in-out ;
     background-color: $third_color ;
     border-radius : 0px 10px 10px 0px ; 
     .fa-check-circle {
