--- a/style.css
+++ b/style.css
@@ -808,7 +808,7 @@ footer .container a {
 }
 
 body #loading_spinner {
-  background-color: #000000;
+  background-color: #F6F6F6;
   box-sizing: border-box;
   position: fixed;
   top: 0;
@@ -843,11 +843,14 @@ body #loading_spinner {
   0% {
     opacity: 1;
   }
-  90% {
+  95% {
     opacity: 0.9;
   }
-  95% {
-    opacity: 0.5;
+  97% {
+    opacity: 0.7;
+  }
+  98% {
+    opacity: 0.4;
   }
   100% {
     opacity: 0;
@@ -1014,7 +1017,6 @@ body #loading_spinner {
   }
 }
 #loading_spinner .ohmyfood {
-  filter: invert(100%);
   position: absolute;
   z-index: 5;
   width: 50%;
@@ -1039,9 +1041,9 @@ body #loading_spinner {
   -moz-animation-fill-mode: none;
   -webkit-animation-fill-mode: none;
   animation-fill-mode: none;
-  -webkit-animation-delay: 2s;
-  -moz-animation-delay: 2s;
-  animation-delay: 2s;
+  -webkit-animation-delay: 1.5s;
+  -moz-animation-delay: 1.5s;
+  animation-delay: 1.5s;
 }
 @media (min-width: 767px) {
   #loading_spinner .ohmyfood {
