--- a/style.css
+++ b/style.css
@@ -808,7 +808,7 @@ footer .container a {
 }
 
 body #loading_spinner {
-  background-color: #F6F6F6;
+  background-color: #f7f7f7;
   box-sizing: border-box;
   position: fixed;
   top: 0;
@@ -843,11 +843,14 @@ body #loading_spinner {
   0% {
     opacity: 1;
   }
-  95% {
-    opacity: 0.9;
+  85% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0.7;
   }
   97% {
-    opacity: 0.7;
+    opacity: 0.5;
   }
   98% {
     opacity: 0.4;
