--- a/sass/components/btn_commander.scss
+++ b/sass/components/btn_commander.scss
@@ -50,9 +50,9 @@
     width : 100% ; 
     height : 100% ; 
     border-radius : 30px ;   
-      background : -webkit-gradient(linear, left bottom, right top,from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
-      background : -moz-gradient(linear, left bottom, right top, from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
-    background : gradient(linear, left bottom, right top, from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
+      background : -webkit-linear-gradient(to left bottom, lighten($secondary_color, 10%), lighten($primary_color, 10%));
+      background : -moz-linear-gradient(to left bottom, lighten($secondary_color, 10%), lighten($primary_color, 10%));
+    background : linear-gradient(to left bottom, lighten($secondary_color, 10%), lighten($primary_color, 10%));
     box-shadow : 3px 3px 3px darken($very_light_grey, 35%) ; 
       -webkit-transform : scaleX(0) ; 
       -moz-transform : scaleX(0) ;
