--- a/style.css
+++ b/style.css
@@ -790,7 +790,7 @@ footer .container a {
   -webkit-text-overflow: ellipsis;
   -moz-text-overflow: ellipsis;
   text-overflow: ellipsis;
-  padding: 10px 0;
+  padding: 10px 10px 10px 0;
 }
 #menus #entrees .entrees .menu .informations, #menus #entrees .plats .menu .informations, #menus #entrees .desserts .menu .informations, #menus #plats .entrees .menu .informations, #menus #plats .plats .menu .informations, #menus #plats .desserts .menu .informations, #menus #desserts .entrees .menu .informations, #menus #desserts .plats .menu .informations, #menus #desserts .desserts .menu .informations {
   display: flex;
